<resources>
    <string name="app_name">Move Planner</string>
    <string name="fab_text">Get Started</string>
    <string name="intro_text">
        This is a helper app for City of The Great Machine S&amp;C mode. Once you have planned
        your next move, you can use this app to find out the probability of detainment for your
        plan. Be prepared to enter the cards currently in the movement deck, along with the
        number of detainment\'s each card will cause when drawn by each servant. Click the
        button below to proceed.
    </string>


    <string name="reset_icon_text">Reset</string>
    <string name="done_icon_text">Done</string>
    <string name="card_count_text">There are 13 cards in the deck</string>
    <string name="delete_btn_description">delete button</string>

    <string name="stay_and_make_guard_card_description">stay still and make guard card</string>
    <string name="stay_still_card_description">stay still card</string>
    <string name="move_down_card_description">move down card</string>
    <string name="move_left_card_description">move left card</string>
    <string name="move_up_card_description">move up card</string>
    <string name="move_right_card_description">move right card</string>
    <string name="central_square_card_description">central square card</string>
    <string name="bird_card_description">bird card</string>
    <string name="goggles_card_description">goggles card</string>
    <string name="rose_card_description">rose card</string>
    <string name="maintenance_card_description">maintenance card</string>


    <string name="overview_fragment_title">Overview</string>
    <string name="data_entry_instructions">
        For each servant, enter the number of detainment\'s that this card will trigger if it is drawn by that servant.
    </string>
    <string name="placeholder_card_number">Card ?/13</string>
    <string name="minus_button_description">minus button</string>
    <string name="plus_button_description">plus button</string>
    <string name="servant_1_detainment_count_text">0 detainments if\ndrawn by servant 1</string>
    <string name="servant_2_detainment_count_text">0 detainments if\ndrawn by servant 2</string>
    <string name="servant_3_detainment_count_text">0 detainments if\ndrawn by servant 3</string>
    <string name="overview_instructions">swipe right to enter information about the cards in the deck. Then come back here to see the results</string>
    <string name="output_starter_text">Click the button below to calculate the results from the data you entered.</string>
    <string name="calculate_fab_text">calculate</string>
    <string name="swipe_right_description">swipe right</string>
    <string name="swipe_left_description">swipe left</string>

    <string name="line_of_output">There is a %s%% chance that there will be %d detainments</string>
</resources>