<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deck_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <LinearLayout
        android:id="@+id/outerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/stayAndMakeGuardCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/stay_and_make_guard"
                android:contentDescription="@string/stay_and_make_guard_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/stayStillCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/stay_still"
                android:contentDescription="@string/stay_still_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/moveDownCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/move_down"
                android:contentDescription="@string/move_down_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/moveLeftCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/move_left"
                android:contentDescription="@string/move_left_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/moveUpCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/move_up"
                android:contentDescription="@string/move_up_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/moveRightCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/move_right"
                android:contentDescription="@string/move_right_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/centralSquareCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/central_square"
                android:contentDescription="@string/central_square_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/birdCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/bird"
                android:contentDescription="@string/bird_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/gogglesCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/goggles"
                android:contentDescription="@string/goggles_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/roseCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/rose"
                android:contentDescription="@string/rose_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/maintenance1CardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/maintenance"
                android:contentDescription="@string/maintenance_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/maintenance2CardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/maintenance"
                android:contentDescription="@string/maintenance_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/maintenance3CardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="8dp"
                android:src="@drawable/maintenance"
                android:contentDescription="@string/maintenance_card_description"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_btn_description"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>